--- a/step03/index.html
+++ b/step03/index.html
@@ -45,7 +45,9 @@
                     </figure>
                     <div class="des">
                         <h2>Lorem ipsum dolor sit amet.</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur.<br />Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.
+                            <br />Lorem ipsum dolor sit amet consectetur.
+                        </p>
                     </div>
                 </div>
             </section>
